Convert imported modules from UTF-8 to UTF-16 before executing

If JS_CStringsAreUTF8 is false, the JSAPI assumes C strings are
ISO-8859-1. Unfortunately, we rely on that setting for byte arrays,
so just do the conversion ourselves, like we do in gjs_context_eval().

https://bugzilla.gnome.org/show_bug.cgi?id=687095